--- a/appsettings.Docker.json
+++ b/appsettings.Docker.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "SQl": "Server=db;Database=Beers;User=sa;Password=Str0ngP4ssW0rd@!#"
   }
 }
