--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "SQl": "Server=127.0.0.1;Database=Beers;User=sa;Password=Str0ngP4ssW0rd@!#"
+    "SQl": "Server=127.0.0.1;Database=Beers;User=sa;Password=<YourNewStrong@Passw0rd>"
   }
 }
