--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,25 +6,9 @@ services:
   db:
     image: "mcr.microsoft.com/mssql/server"
     environment:
-      SA_PASSWORD: "Str0ngP4ssW0rd@!#"
+      SA_PASSWORD: "<YourNewStrong@Passw0rd>"
       ACCEPT_EULA: "Y"
-    ports:
-      - 1433:1433
-    volumes:
-      - ./db/data:/var/opt/mssql/data
-
-  api:
-    image: beerapi
-    build: 
-      context: .
-      dockerfile: ./Dockerfile
-    environment: 
-      - ASPNETCORE_URLS=http://+:5000
-      - ASPNETCORE_ENVIRONMENT=Docker
-    ports:
-      - 5000:5000
-      - 5001:5001
-    depends_on: 
-      - db
+    ports: 
+      - 1433:1433 
     volumes: 
-      - ~/.vsdbg:/remote_debugger:rw
+        - ./data:/var/opt/mssql/data
