Added Test project

--- a/BeerTest/BeerTest.csproj
+++ b/BeerTest/BeerTest.csproj
@@ -17,6 +17,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="FluentAssertions" Version="5.10.3"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.4"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../BeerApi/BeerApi.csproj"></ProjectReference>
   </ItemGroup>
 
 </Project>
