--- a/BeerApi/docker-compose.yml
+++ b/BeerApi/docker-compose.yml
@@ -12,3 +12,17 @@ services:
       - 1433:1433 
     volumes: 
         - ./data:/var/opt/mssql/data
+
+  api:
+    image: beerapi
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    environment: 
+      - ASPNETCORE_URLS=http://+:5000
+      - ASPNETCORE_ENVIRONMENT=Docker
+    ports:
+      - 5000:5000
+      - 5001:5000
+    depends_on: 
+      - db
